# AI-Dev-Tools-Zoomcamp-2025

./: .dockerignore  README.md  openapi.yaml  vitest.config.ts
02-Coding Colab App/: Dockerfile  package.json
02-Coding Colab App/src/components/: OutputConsole.tsx
02-Coding Colab App/src/hooks/: useInterviewSession.ts
02-Coding Colab App/src/pages/: InterviewSession.tsx
02-Coding Colab App/supabase/migrations/: 20251221132024_3faf4efc-ce3b-4b98-adf8-3571bd6f8a65.sql
02-coding-interview/: .env  README.md  package-lock.json
02-coding-interview/src/components/: CodeEditor.tsx  LanguageSelector.tsx
02-coding-interview/src/pages/: Index.tsx
02-coding-interview/src/test/: mswServer.ts
02-coding-interview/src/utils/: codeExecutor.ts
02-coding-interview/supabase/: config.toml
03-MCP/: DOCUMENTATION.md  README.md  main.py  pyproject.toml  search.py  test.py
backend/: README.md
frontend/: index.html
frontend/src/components/: Leaderboard.tsx
frontend/src/contexts/: AuthContext.tsx
snake-arena/: AGENDS.md  Dockerfile  Makefile  docker-compose.yml  render.yaml
snake-arena-live/backend/: pyproject.toml
snake-arena-live/frontend/: tailwind.config.ts
snake-arena/.github/workflows/: ci-cd.yml
snake-arena/backend/: Dockerfile  main.py  snake_arena.db
snake-arena/frontend/: package-lock.json  package.json
snake-game/: package-lock.json
snake-game/src/: App.jsx  SnakeGame.jsx  snake.css
src/: App.tsx  index.css
src/components/: SessionHeader.tsx
src/components/ui/: button.tsx
src/test/: setup.ts  useInterviewSession.integration.test.tsx
(+18 files in other folders)
