[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.38.0",
]
